// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps contains the right keys 1`] = `
Object {
  "setMessage": [Function],
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "message": undefined,
}
`;
